Finalize Homepage